# causalopsbench-public

./: .gitignore  LICENSE  MANIFEST.md  README.md  pyproject.toml  requirements.txt
causalopsbench/: __init__.py  __main__.py  _io.py  baselines.py  cli.py  domains.py  evaluate.py  generator.py  metrics.py  schemas.py  simulator.py
cob_ext/: __init__.py  baselines.py  model_client.py  schemas.py
cob_ext/adapters/: __init__.py  base.py  lbnl_fdd_adapter.py  rcaeval_re2_adapter.py
cob_ext/prompts/: __init__.py  external_agent_prompt.txt
cob_ext/reporting/: __init__.py  make_external_figures.py  make_external_tables.py
cob_ext/runners/: __init__.py  run_external_agents.py  run_external_baselines.py
cob_ext/scoring/: __init__.py  bootstrap_ci.py  score_external.py
data/: dev.jsonl  threshold_results.json
docs/: benchmark_card.md  ollama_experiments.md  verification_report.md
examples/: prediction_schema.json
external_validation/: README.md
external_validation/configs/: external_models.yaml  lbnl_fdd_rtu_sdahu.yaml  rcaeval_re2.yaml
results/cob_v2/: domain_table.tex  experiment_manifest.json  leaderboard_table.tex  summary.csv  summary_by_domain.csv  summary_by_seed.csv
results/cob_v2_analysis/: contamination_delta_ci.csv  contamination_delta_ci.tex  contamination_no_topology_table.csv  contamination_stress_table.csv  (+32 more)
scripts/: analyze_revision_artifacts.py  run_contamination_stress.py  run_experiments.py  run_external_agents_full.sh  run_foundation_agent_experiments.py
tests/: test_core.py  test_external_validation.py  test_foundation_runner.py
(+341 files in other folders)
