[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "causalopsbench"
version = "0.1.0"
description = "CausalOpsBench: multimodal operational digital-twin benchmark scaffold."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "CausalOpsBench Contributors"}
]
keywords = ["benchmark", "agents", "causality", "digital-twin", "root-cause-analysis"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
causalopsbench = "causalopsbench.cli:main"

[tool.setuptools.packages.find]
include = ["causalopsbench*", "cob_ext*"]

[tool.setuptools.package-data]
cob_ext = ["prompts/*.txt"]
